--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/joy": "^5.0.0-alpha.42",
     "@mui/material": "^5.10.2",
+    "@octokit/rest": "^19.0.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
